deploy: 6b32cab94cc0d4301e75ec9614b9463d232b6be7

--- a/dao-login.html
+++ b/dao-login.html
@@ -162,9 +162,18 @@
 </ol>
 <p>Here's a GIF going over the same steps using <a href="https://app.ref.finance/">Ref-finance</a></p>
 <p><img src="https://i.imgur.com/xv2BMVn.gif" alt="" /></p>
-<pre><code class="language-admonish note">- This only works with DApps that support either [NEAR wallet](https://wallet.near.org/) or [MyNearWallet](https://mynearwallet.com/)
-- Login will be in &quot;read-only&quot; mode, so the DAO's account will not initiate transactions using the DApp's interface
-</code></pre>
+<div id="admonition-note" class="admonition note">
+<div class="admonition-title">
+<p>Note</p>
+<p><a class="admonition-anchor-link" href="#admonition-note"></a></p>
+</div>
+<div>
+<ul>
+<li>This only works with DApps that support either <a href="https://wallet.near.org/">NEAR wallet</a> or <a href="https://mynearwallet.com/">MyNearWallet</a></li>
+<li>Login will be in &quot;read-only&quot; mode, so the DAO's account will not initiate transactions using the DApp's interface</li>
+</ul>
+</div>
+</div>
 
                     </main>
 
