--- a/getting-started/onboarding.html
+++ b/getting-started/onboarding.html
@@ -143,15 +143,29 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="onboard-your-dao"><a class="header" href="#onboard-your-dao">Onboard your DAO</a></h1>
-<pre><code class="language-admonish note">In order to create a multicall instance for your DAO, you must have permissions to create function-call proposals on the DAO. 
-</code></pre>
+<div id="admonition-note" class="admonition note">
+<div class="admonition-title">
+<p>Note</p>
+<p><a class="admonition-anchor-link" href="#admonition-note"></a></p>
+</div>
+<div>
+<p>In order to create a multicall instance for your DAO, you must have permissions to create function-call proposals on the DAO.</p>
+</div>
+</div>
 <ol>
 <li>Go to <a href="https://multicall.app/#/dao" target="_blank">https://multicall.app/#/dao</a></li>
 <li>In the lower left hand corner log in with your wallet (1.) and select the DAO you would like to use multicall with (2.).</li>
 </ol>
 <p><img src="https://i.imgur.com/PiS2KTW.png" alt="" /></p>
-<pre><code class="language-admonish tip">If the DAO symbol lights up red, the address is not a valid dao address - please check for typos. Instead the symbol should be yellow, indicating that while the DAO exists, there is no belonging multicall instance yet.
-</code></pre>
+<div id="admonition-tip" class="admonition tip">
+<div class="admonition-title">
+<p>Tip</p>
+<p><a class="admonition-anchor-link" href="#admonition-tip"></a></p>
+</div>
+<div>
+<p>If the DAO symbol lights up red, the address is not a valid dao address - please check for typos. Instead the symbol should be yellow, indicating that while the DAO exists, there is no belonging multicall instance yet.</p>
+</div>
+</div>
 <ol start="3">
 <li>In the middle of the page you see requirements that need to be met in order to create a multicall instance for the specified dao. If all except &quot;<em>DAO has no multicall instance</em>&quot; are met, a green button shows up, click it to propose a multicall creation proposal.</li>
 </ol>
