--- a/index.html
+++ b/index.html
@@ -148,9 +148,16 @@
 <p>The regular DAO contract (SputnikDAO) only allows calling one target contract per proposal. That's why for proposals that call multiple smart contracts, we need a proxy contract that will handle all desired function calls. Multicall instances serve this purpose. Every DAO has its own private multicall instance to work with. 
 <img src="https://i.imgur.com/jUgiHru.png" alt="" />
 The DAO will call its MI and pass it some instructions, the MI will follow those instructions to call the desired functions on the target contracts.</p>
-<pre><code class="language-admonish info">The MI address is always derived from the DAO address. It's easy to explain it with an example:
-If the DAO address is `marmaj.sputnik-dao.near` then it will have a MI deployed at `marmaj.v1.multicall.near`
-</code></pre>
+<div id="admonition-info" class="admonition info">
+<div class="admonition-title">
+<p>Info</p>
+<p><a class="admonition-anchor-link" href="#admonition-info"></a></p>
+</div>
+<div>
+<p>The MI address is always derived from the DAO address. It's easy to explain it with an example:
+If the DAO address is <code>marmaj.sputnik-dao.near</code> then it will have a MI deployed at <code>marmaj.v1.multicall.near</code></p>
+</div>
+</div>
 <p>DAOs need to create a multicall instance (MI) before using it for the first time. You can think of this as an installation step that only happens once. Instructions for this can be found on the <a href="onboarding.html">onboarding guide</a>.</p>
 
                     </main>
